# carmen-smartter

./: CMakeLists.txt  changelog
conf/: CMakeLists.txt  commander.conf  smartter.ini
data/maps/: stjoan.map  upc.map
smart-carmen/: CMakeLists.txt
smart-carmen/src/: CMakeLists.txt
smart-carmen/src/alasca/: alascaxt.h  axtCarmen.cpp  libalascaxt.c
smart-carmen/src/alasca-interface/: axt_interface.c
smart-carmen/src/elrob-carmen/: Messages.h  elrobCarmen.cpp
smart-carmen/src/elrob-localize/: elrobLocalize.cpp
smart-carmen/src/gyro/: gyro.c  gyro_ipc.c  gyro_ipc.h
smart-carmen/src/gyro-interface/: gyro_interface.c  gyro_messages.h
smart-carmen/src/joystick/: joysmart.c
smart-carmen/src/locfilter/: locfilter.c  locfilter_ipc.c  locfilter_ipc.h
smart-carmen/src/locfilter-interface/: locfilter_messages.h
smart-carmen/src/logger-write/: writelog.h
smart-carmen/src/smart/: smart.c  smart_ipc.c  smart_ipc.h
smart-carmen/src/smart-interface/: smart_interface.c  smart_interface.h
smart-carmen/src/smartFrontLaser/: smartFrontLaser.cpp
smart-carmen/src/smartLocalize/: smartLocalize.cpp
smart-interfaces/: CMakeLists.txt
smart-interfaces/src/: CMakeLists.txt
smart-interfaces/src/alasca-interface/: axt_interface.c  axt_interface.h  axt_message.h
smart-interfaces/src/locfilter-interface/: locfilter_interface.c  locfilter_interface.h  locfilter_messages.h
smart-interfaces/src/logger/: logger.c  logger.h
smart-interfaces/src/smart-interface/: smart_interface.c  smart_interface.h  smart_messages.h
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/core/: CMakeLists.txt
src/lib/core/axt/: CMakeLists.txt  axt_ipc.c  axt_ipc.h
src/lib/core/gyro/: CMakeLists.txt  gyro_ipc.c  gyro_ipc.h
src/lib/core/locfilter/: CMakeLists.txt  locfilter_ipc.c  locfilter_ipc.h
src/lib/core/smart/: CMakeLists.txt  smart_ipc.c  smart_ipc.h
src/lib/interface/axt/: CMakeLists.txt  axt_interface.c  axt_interface.h  axt_messages.h
src/lib/interface/gyro/: CMakeLists.txt  gyro_interface.c  gyro_interface.h
src/lib/interface/locfilter/: CMakeLists.txt  locfilter_interface.c  locfilter_interface.h
src/lib/interface/smart/: CMakeLists.txt  smart_interface.c  smart_interface.h
src/lib/writelog/: CMakeLists.txt  writelog.c  writelog.h
